<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterPhoneActivity">

    <include
        android:id="@+id/register_phone_page_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_page_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/action_phone_btn" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="15dp"
                app:cardBackgroundColor="#FBF7F7"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hint_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Enter Your Phone Number"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp">

                        <EditText
                            android:id="@+id/numbered"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:drawablePadding="16dp"
                            android:drawableStart="@drawable/ic_phone_black_24dp"
                            android:hint="@string/enter_mobile_number"
                            android:inputType="phone" />

                        <ImageView
                            android:id="@+id/verifiedsign"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_check_circle_black_24dp"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/verificationed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:background="@drawable/rect_text_edit"
                        android:hint="@string/enter_code"
                        android:inputType="number"
                        android:padding="10dp"
                        android:visibility="invisible" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/sendverifybt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_send_white_24dp"
                        android:tag="@string/tag_send" />

                    <TextView
                        android:id="@+id/timertv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="25sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:textSize="20sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </FrameLayout>

</android.support.constraint.ConstraintLayout>